# SimpleSLAM

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_pure_cmake.txt  Claude_Code_工具链配置文档.md  Dockerfile  LICENSE  README.md  Reviewer1.md  SimpleSLAM.md  docker-compose.yml  package.xml  教学文档编写规范.md
apps/: CMakeLists.txt  graph_demo.cpp  simpleslam_run.cpp
backend/: CMakeLists.txt
cmake/: CompilerOptions.cmake
config/: test.yaml
configs/: defaults.yaml  fastlio.yaml  lo_kissicp.yaml
core/: CMakeLists.txt
core/src/: logger.cpp  timing.cpp  topic_hub.cpp
docker/: Dockerfile.ubuntu2204
docs/: Ch_ICP_配准算法从数学到实现.md  ModulePluginBase.md  error.md  module_graph_README.md  tutorial.md
include/SimpleSLAM/: backend.hpp  core.hpp  odometry.hpp  resources.hpp
include/SimpleSLAM/adapters/: gtsam_bridge.hpp
include/SimpleSLAM/backend/: loop_closure_service.hpp  pgo_service.hpp  service_base.hpp  submap_manager.hpp
include/SimpleSLAM/backend/submap/: submap.hpp
include/SimpleSLAM/core/: convention.hpp  infra.hpp  math.hpp  types.hpp
include/SimpleSLAM/core/concepts/: any_loop_detector.hpp  any_pose_graph_optimizer.hpp  any_registration_target.hpp  loop_detector.hpp  pose_graph_optimizer.hpp  registration_target.hpp
include/SimpleSLAM/core/infra/: callback_slot.hpp  clock.hpp  comm.hpp  comm_config.hpp  config.hpp  demangle.hpp  health_monitor.hpp  logger.hpp  node_handle.hpp  registry.hpp  service.hpp  timing.hpp  topic.hpp  topic_hub.hpp
include/SimpleSLAM/core/infra/comm/: action.hpp  comm_config.hpp  service.hpp  topic.hpp  topic_names.hpp
include/SimpleSLAM/core/math/: icp_solver.hpp  kdtree.hpp  lie_utils.hpp  normal_estimation.hpp  pcd_io.hpp  point_ops.hpp  scan_utils.hpp  voxel_grid.hpp
include/SimpleSLAM/core/types/: common.hpp  event_types.hpp  geometry.hpp  graph_epoch.hpp  keyframe.hpp  odometry_result.hpp  sensor_data.hpp
include/SimpleSLAM/odometry/: imu_buffer.hpp  keyframe_selector.hpp  lo_icp_odometry.hpp  odometry_base.hpp  voxel_hash_target.hpp
include/SimpleSLAM/resources/: current_state.hpp  extrinsics_manager.hpp  keyframe_store.hpp  pose_graph.hpp  trajectory.hpp
include/SimpleSLAM/runner/: offline_app.hpp  offline_runner.hpp  pipeline_builder.hpp
include/SimpleSLAM/sensor_io/: euroc_source.hpp  kitti_source.hpp  sensor_mux.hpp  sensor_source.hpp
include/common/: data_manage.h  data_type.h  module.h  point_type.h
include/data_manage/: data_manage.h
include/eskf/: eskf.h
include/module_graph/: module_graph.cpp  module_graph.h
include/sensor_io/: sensor_io.cpp  sensor_io.h
include/simpleslam/config/: ConfigLoader.h  Node.h  ParamConversions.h  Params.h  PipelineConfig.h  SystemConfig.h
include/simpleslam/core/: ConcurrentQueue.h  Convention.h  IService.h  Registry.hpp  ServiceNames.h  TopicBus.h  Types.h
include/simpleslam/data/: Correction.h  DegeneracyInfo.h  Events.h  KeyframeData.h  PipelineResult.h  SensorData.h  State.h
include/simpleslam/infrastructure/: DatasetClock.h  DirectChannel.h  IClock.h  LogService.h  Profiler.h  SystemClock.h  TopicBus.h
include/simpleslam/modules/: BundleAssembler.h  FrameBoundaryHook.h  ModuleBase.h  ModuleBased.hpp  PipelineBase.h  SensorIO.h  TriggerPolicy.h
include/simpleslam/plugins/: Initializer.h  KeyframeSelector.h  MapStructure.h  PluginBased.hpp  PluginFactory.h  RegistrationMethod.h  ResidualComputer.h
include/simpleslam/runtime/: BuildSystem.h  Creator.h  IFrameEventDrain.h  LogManager.h  Permission.h  ResourceHandle.h  ResourceHub.h  RuntimeState.h  Scheduler.h  SystemContext.h
odometry/: CMakeLists.txt
resources/src/: keyframe_store.cpp
runner/src/: offline_runner.cpp
scripts/: evaluate.py  install_deps.sh
sensor_io/src/: euroc_source.cpp
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt
src/config/: ConfigLoader.cpp  Node.cpp
src/core/: CMakeLists.txt
src/core/src/: config.cpp  normal_estimation.cpp  pcd_io.cpp  point_ops.cpp
src/infrastructure/: LogService.cpp  TopicBus.cpp
src/modules/: ModuleBase.cpp
src/resources/: CMakeLists.txt
src/resources/src/: pose_graph.cpp  trajectory.cpp
src/ros1_inference/: slam.cpp
src/runner/: CMakeLists.txt
src/runner/src/: offline_app.cpp  offline_runner.cpp
src/runtime/: BuildSystem.cpp  Scheduler.cpp
src/sensor_io/: CMakeLists.txt
src/sensor_io/src/: euroc_source.cpp  kitti_source.cpp  sensor_mux.cpp
tests/: CMakeLists.txt
tests/unit/: test_action.cpp  test_any_loop_detector.cpp  test_any_pose_graph_optimizer.cpp  test_any_registration_target.cpp  test_callback_slot.cpp  test_comm_concurrency.cpp  test_comm_config.cpp  test_config.cpp  test_current_state.cpp  test_default_init.cpp  test_event_types.cpp  test_extrinsics_manager.cpp  test_geometry.cpp  test_health_monitor.cpp  test_icp_robustness.cpp  test_icp_solver.cpp  test_imu_buffer.cpp  test_kdtree.cpp  test_keyframe_selector.cpp  test_keyframe_store.cpp  test_kitti_source.cpp  test_lo_icp_odometry.cpp  test_loop_closure_service.cpp  test_node_handle.cpp  test_odometry_base.cpp  test_offline_app.cpp  test_offline_runner.cpp  test_pcd_io.cpp  test_pgo_service.cpp  test_pipeline_builder.cpp  test_point_ops.cpp  test_pose_graph.cpp  test_registry.cpp  test_release_guards.cpp  test_scan_utils.cpp  test_sensor_data.cpp  test_service.cpp  test_submap.cpp  test_submap_manager.cpp  test_topic.cpp  (+5 more)
